<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_screen"
    android:background="@color/screen_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q05_title"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q05_desc"
        android:textSize="@dimen/text_size_subtitle"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        android:layout_marginTop="4dp" />

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/card_rounded_bg"
        android:layout_marginTop="@dimen/margin_medium"
        android:elevation="3dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_medium">

        <Button
            android:id="@+id/btnShowFragmentA"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/q05_btn_frag_a"
            android:textColor="@color/white"
            android:background="@drawable/btn_rounded_primary"
            android:textStyle="bold"
            android:layout_marginEnd="6dp" />

        <Button
            android:id="@+id/btnShowFragmentB"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/q05_btn_frag_b"
            android:textColor="@color/white"
            android:background="@drawable/btn_rounded_accent"
            android:textStyle="bold"
            android:layout_marginStart="6dp" />
    </LinearLayout>
</LinearLayout>
